// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectColorNotificationHandler getTeamsMessage method for created notification should match snapshot when there are more than 1 events 1`] = `
  {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "type": "AdaptiveCard",
      "version": "1.2",
      "body": [
          {
              "type": "TextBlock",
              "text": "projectName",
              "size": "large",
              "weight": "bolder"
          },
          {
              "type": "TextBlock",
              "text": "**2 new colors** are added! 🏃‍♂",
              "wrap": true,
              "spacing": "small"
          },
          {
              "type": "Container",
              "spacing": "large",
              "items": [
                  {
                      "type": "TextBlock",
                      "text": "Make sure your stylesheets are up to date!",
                      "spacing": "none"
                  }
              ]
          }
      ],
      "actions": [
          {
              "type": "Action.OpenUrl",
              "title": "Open in Web",
              "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId&cid=anotherColorId"
          },
          {
              "type": "Action.OpenUrl",
              "title": "Open in App",
              "url": "zpl://colors?pid=projectId&cids=colorId,anotherColorId"
          }
      ]
  }
`;

exports[`projectColorNotificationHandler getTeamsMessage method for created notification should match snapshot when there is only 1 event 1`] = `
  {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "type": "AdaptiveCard",
      "version": "1.2",
      "body": [
          {
              "type": "TextBlock",
              "text": "projectName",
              "size": "large",
              "weight": "bolder"
          },
          {
              "type": "TextBlock",
              "text": "**colorName** is added! 🏃‍♂",
              "wrap": true,
              "spacing": "small"
          },
          {
              "type": "Container",
              "spacing": "large",
              "items": [
                  {
                      "type": "TextBlock",
                      "text": "Make sure your stylesheets are up to date!",
                      "spacing": "none"
                  }
              ]
          }
      ],
      "actions": [
          {
              "type": "Action.OpenUrl",
              "title": "Open in Web",
              "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId"
          },
          {
              "type": "Action.OpenUrl",
              "title": "Open in App",
              "url": "zpl://colors?pid=projectId&cids=colorId"
          }
      ]
  }
`;

exports[`projectColorNotificationHandler getTeamsMessage method for updated notification should match snapshot when there are more than 1 events 1`] = `
  {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "type": "AdaptiveCard",
      "version": "1.2",
      "body": [
          {
              "type": "TextBlock",
              "text": "projectName",
              "size": "large",
              "weight": "bolder"
          },
          {
              "type": "TextBlock",
              "text": "**2 new colors** are updated! 🏃‍♂",
              "wrap": true,
              "spacing": "small"
          },
          {
              "type": "Container",
              "spacing": "large",
              "items": [
                  {
                      "type": "TextBlock",
                      "text": "Make sure your stylesheets are up to date!",
                      "spacing": "none"
                  }
              ]
          }
      ],
      "actions": [
          {
              "type": "Action.OpenUrl",
              "title": "Open in Web",
              "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId&cid=anotherColorId"
          },
          {
              "type": "Action.OpenUrl",
              "title": "Open in App",
              "url": "zpl://colors?pid=projectId&cids=colorId,anotherColorId"
          }
      ]
  }
`;

exports[`projectColorNotificationHandler getTeamsMessage method for updated notification should match snapshot when there is only 1 event 1`] = `
  {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "type": "AdaptiveCard",
      "version": "1.2",
      "body": [
          {
              "type": "TextBlock",
              "text": "projectName",
              "size": "large",
              "weight": "bolder"
          },
          {
              "type": "TextBlock",
              "text": "**colorName** is updated! 🏃‍♂",
              "wrap": true,
              "spacing": "small"
          },
          {
              "type": "Container",
              "spacing": "large",
              "items": [
                  {
                      "type": "TextBlock",
                      "text": "Make sure your stylesheets are up to date!",
                      "spacing": "none"
                  }
              ]
          }
      ],
      "actions": [
          {
              "type": "Action.OpenUrl",
              "title": "Open in Web",
              "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId"
          },
          {
              "type": "Action.OpenUrl",
              "title": "Open in App",
              "url": "zpl://colors?pid=projectId&cids=colorId"
          }
      ]
  }
`;
